--- a/MiracleListBW/MiracleListBW32.csproj
+++ b/MiracleListBW/MiracleListBW32.csproj
@@ -2,9 +2,13 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>netstandard2.1</TargetFramework>
+  <LangVersion>8.0</LangVersion>
+  <RazorLangVersion>3.0</RazorLangVersion>
+  
+  <!--<TargetFramework>net5.0</TargetFramework>
   <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
+  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>-->
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
@@ -28,14 +32,15 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.8.20407.11" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.7" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
  </ItemGroup>
 
  <ItemGroup>
-  <ProjectReference Include="..\BO\BO.csproj" />
-  <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+   <ProjectReference Include="..\BO\BO.csproj" />
+   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
  </ItemGroup>
 </Project>
