--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -14,11 +14,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.1.0.0</Version>
+  <Version>0.4.0.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.1.0.0</AssemblyVersion>
-  <FileVersion>0.1.0.0</FileVersion>
+  <AssemblyVersion>0.4.0.0</AssemblyVersion>
+  <FileVersion>0.4.0.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
@@ -28,13 +28,15 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.7.20365.19" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.7.20365.19" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.7.20364.11" />
+  <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.8.20407.11" />
  </ItemGroup>
 
  <ItemGroup>
-   <ProjectReference Include="..\BO\BO.csproj" />
-   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+  <ProjectReference Include="..\BO\BO.csproj" />
+  <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
  </ItemGroup>
 </Project>
