--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,9 +2,13 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>netstandard2.1</TargetFramework>
+  <LangVersion>8.0</LangVersion>
+  <RazorLangVersion>3.0</RazorLangVersion>
+  
+  <!--<TargetFramework>net5.0</TargetFramework>
   <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
+  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>-->
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
@@ -14,11 +18,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.1.0.0</Version>
+  <Version>0.3.0.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.1.0.0</AssemblyVersion>
-  <FileVersion>0.1.0.0</FileVersion>
+  <AssemblyVersion>0.3.0.0</AssemblyVersion>
+  <FileVersion>0.3.0.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
