--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,13 +2,9 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>netstandard2.1</TargetFramework>
-  <LangVersion>8.0</LangVersion>
-  <RazorLangVersion>3.0</RazorLangVersion>
-  
-  <!--<TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net5.0</TargetFramework>
   <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>-->
+  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
@@ -18,11 +14,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.3.0.0</Version>
+  <Version>0.1.0.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.3.0.0</AssemblyVersion>
-  <FileVersion>0.3.0.0</FileVersion>
+  <AssemblyVersion>0.1.0.0</AssemblyVersion>
+  <FileVersion>0.1.0.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
@@ -32,15 +28,13 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.7" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
  </ItemGroup>
 
  <ItemGroup>
-   <ProjectReference Include="..\BO\BO.csproj" />
-   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+  <ProjectReference Include="..\BO\BO.csproj" />
+  <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
  </ItemGroup>
 </Project>
