--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,13 +2,9 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>netstandard2.1</TargetFramework>
-  <LangVersion>8.0</LangVersion>
-  <RazorLangVersion>3.0</RazorLangVersion>
-  
-  <!--<TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net5.0</TargetFramework>
   <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>-->
+  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
