--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -14,11 +14,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.3.0.0</Version>
+  <Version>0.4.0.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.3.0.0</AssemblyVersion>
-  <FileVersion>0.3.0.0</FileVersion>
+  <AssemblyVersion>0.4.0.0</AssemblyVersion>
+  <FileVersion>0.4.0.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
@@ -28,6 +28,7 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
+  <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
   <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
