--- a/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
+++ b/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
@@ -9,6 +9,7 @@
  </PropertyGroup>
  
  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0-preview.8.20414.8" />
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
