--- a/MiracleListBW/MiracleListBW32.csproj
+++ b/MiracleListBW/MiracleListBW32.csproj
@@ -32,10 +32,12 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
+  <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.7" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.7" />
   <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
  </ItemGroup>
 
