--- a/MiracleListBW/MiracleListBW32.csproj
+++ b/MiracleListBW/MiracleListBW32.csproj
@@ -33,6 +33,7 @@
  <ItemGroup>
   <!--Standardreferenzen für BW-->
   <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
+  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.7" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
