--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -20,6 +20,9 @@
   <AssemblyVersion>0.4.0.0</AssemblyVersion>
   <FileVersion>0.4.0.0</FileVersion>
  </PropertyGroup>
+ <ItemGroup>
+   <None Remove="Pages\Login.razor.css" />
+ </ItemGroup>
 
  <ItemGroup>
   <BlazorWebAssemblyLazyLoad Include="MiracleListRCL" />
@@ -29,6 +32,12 @@
  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
   <NoWarn>1701;1702;1998</NoWarn>
  </PropertyGroup>
+ <ItemGroup>
+   <Content Include="Pages\Login.razor.css">
+     <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+     <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+   </Content>
+ </ItemGroup>
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
