--- a/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
+++ b/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
@@ -11,7 +11,7 @@
  <ItemGroup>
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0-rc.1.20451.14" />
   </ItemGroup>
  
  <ItemGroup>
