--- a/MiracleListUtil/MiracleListUtil.csproj
+++ b/MiracleListUtil/MiracleListUtil.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.8.20414.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-rc.1.20451.17" />
   </ItemGroup>
 
 
