--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -1,10 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
   <TargetFramework>net5.0</TargetFramework>
-  <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
@@ -29,11 +27,12 @@
  <ItemGroup>
   <!--Standardreferenzen für BW-->
   <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0-preview.8.20414.8" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.8.20414.8" />
+  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.20451.17" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.20451.17" PrivateAssets="all" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0-rc.1.20451.17" />
+  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.20451.14" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-rc.1.20451.17" />
  </ItemGroup>
 
  <ItemGroup>
