Fix: Lazy Loading erfordert an RC1 .dll bei Include="name.dll", was zuvor vreboten war

--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -21,7 +21,7 @@
 
  <!--Lazy Loading-->
  <ItemGroup>
-  <BlazorWebAssemblyLazyLoad Include="MiracleListRCL" />
+  <BlazorWebAssemblyLazyLoad Include="MiracleListRCL.dll" />
  </ItemGroup>
 
  <!--Unterdrückung einiger Warnungen-->
