--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -1,10 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
   <TargetFramework>net5.0</TargetFramework>
-  <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-  <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
@@ -14,11 +12,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.3.0.0</Version>
+  <Version>0.3.1.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.3.0.0</AssemblyVersion>
-  <FileVersion>0.3.0.0</FileVersion>
+  <AssemblyVersion>0.3.1.0</AssemblyVersion>
+  <FileVersion>0.3.1.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
@@ -28,12 +26,13 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.8.20407.11" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.20451.17" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.20451.17" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.20451.14" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-rc.1.20451.17" />
  </ItemGroup>
 
+ <!--Projektreferenzen-->
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
