--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -12,11 +12,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.4.0.0</Version>
+  <Version>0.4.1.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.4.0.0</AssemblyVersion>
-  <FileVersion>0.4.0.0</FileVersion>
+  <AssemblyVersion>0.4.1.0</AssemblyVersion>
+  <FileVersion>0.4.1.0</FileVersion>
  </PropertyGroup>
  <ItemGroup>
    <None Remove="Pages\Login.razor.css" />
@@ -45,6 +45,7 @@
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-rc.1.20451.17" />
  </ItemGroup>
 
+ <!--Projektreferenzen-->
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
