zeige erste Kategorie an, wenn es Kategorien gibt!

--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -40,6 +40,7 @@
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-rc.1.20451.17" />
  </ItemGroup>
 
+ <!--Projektreferenzen-->
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
