--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
   <TargetFramework>net5.0</TargetFramework>
-  <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
   <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
  </PropertyGroup>
 
@@ -14,11 +13,11 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.1.0.0</Version>
+  <Version>0.1.2.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.1.0.0</AssemblyVersion>
-  <FileVersion>0.1.0.0</FileVersion>
+  <AssemblyVersion>0.1.2.0</AssemblyVersion>
+  <FileVersion>0.1.2.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
