--- a/MiracleListRCL/MiracleListRCL.csproj
+++ b/MiracleListRCL/MiracleListRCL.csproj
@@ -19,8 +19,8 @@
 
  <ItemGroup>
   <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-rc.2.20475.17" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0-rc.2.20475.17" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0" />
  </ItemGroup>
 
 
