--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -22,6 +22,7 @@
    <None Remove="Pages\Login.razor.css" />
  </ItemGroup>
 
+ <!--Ausnahmen einer DLL aus dem Bundle für Lazy Loading-->
  <ItemGroup>
   <BlazorWebAssemblyLazyLoad Include="MiracleListRCL.dll" />
  </ItemGroup>
