--- a/MiracleListBW/Properties/launchSettings.json
+++ b/MiracleListBW/Properties/launchSettings.json
@@ -16,7 +16,7 @@
      "ASPNETCORE_ENVIRONMENT": "Development"
     }
    },
-   "MiracleList_CSB": {
+   "MiracleListBW": {
     "commandName": "Project",
     "launchBrowser": true,
     "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
