--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -5,6 +5,11 @@
   <TargetFramework>net6.0</TargetFramework>
  </PropertyGroup>
 
+	<!--Versionsinformationen-->
+	<PropertyGroup>
+		<Version>0.2.1.0</Version>
+	</PropertyGroup>
+	
  <!--optionale Anwendungseinstellungen-->
  <PropertyGroup>
   <Description>Blazor WebAssembly-Version des MiracleList Web Frontends</Description>
@@ -12,11 +17,8 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.2.0.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.2.0.0</AssemblyVersion>
-  <FileVersion>0.2.0.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
