--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,9 +2,14 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net6.0</TargetFramework>
  </PropertyGroup>
 
+ <!--Versionsinformationen-->
+ <PropertyGroup>
+  <Version>0.5.2.0</Version>
+ </PropertyGroup>
+	
  <!--optionale Anwendungseinstellungen-->
  <PropertyGroup>
   <Description>Blazor WebAssembly-Version des MiracleList Web Frontends</Description>
@@ -12,11 +17,8 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.5.1.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.5.1.0</AssemblyVersion>
-  <FileVersion>0.5.1.0</FileVersion>
  </PropertyGroup>
 
  <!--Ausnahmen einer DLL aus dem Bundle für Lazy Loading-->
@@ -31,15 +33,19 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
-  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.2" PrivateAssets="all" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.2" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
  </ItemGroup>
 
+ <ItemGroup>
+  <!--Zusatzpakete-->
+  <PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
+  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0-preview.7.21378.6" />
+ </ItemGroup>
+ 
  <!--Projektreferenzen-->
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
