--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,7 +2,7 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net6.0</TargetFramework>
  </PropertyGroup>
 
  <!--Versionsinformationen-->
@@ -30,7 +30,7 @@
   <!--Standardreferenzen für BW-->
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="System.Net.Http.Json" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
  </ItemGroup>
 
