--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,9 +2,14 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net6.0</TargetFramework>
  </PropertyGroup>
 
+ <!--Versionsinformationen-->
+ <PropertyGroup>
+  <Version>0.4.2.0</Version>
+ </PropertyGroup>
+	
  <!--optionale Anwendungseinstellungen-->
  <PropertyGroup>
   <Description>Blazor WebAssembly-Version des MiracleList Web Frontends</Description>
@@ -12,11 +17,8 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.4.1.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.4.1.0</AssemblyVersion>
-  <FileVersion>0.4.1.0</FileVersion>
  </PropertyGroup>
  <ItemGroup>
    <None Remove="Pages\Login.razor.css" />
@@ -40,10 +42,10 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.2" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
  </ItemGroup>
 
  <!--Projektreferenzen-->
