--- a/MiracleListBW/Properties/launchSettings.json
+++ b/MiracleListBW/Properties/launchSettings.json
@@ -1,30 +1,29 @@
 {
- "iisSettings": {
-  "windowsAuthentication": false,
-  "anonymousAuthentication": true,
-  "iisExpress": {
-   "applicationUrl": "http://localhost:6843",
-   "sslPort": 44303
-  }
- },
- "profiles": {
-  "IIS Express": {
-   "commandName": "IISExpress",
-   "launchBrowser": true,
-   "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-   "environmentVariables": {
-    "ASPNETCORE_ENVIRONMENT": "Development"
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+   "iisExpress": {
+    "applicationUrl": "http://localhost:6843/",
+    "sslPort": 44341
    }
   },
-  "BlazorApp3": {
-   "commandName": "Project",
-   "dotnetRunMessages": "true",
-   "launchBrowser": true,
-   "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-   "applicationUrl": "https://localhost:5001;http://localhost:5000",
-   "environmentVariables": {
-    "ASPNETCORE_ENVIRONMENT": "Development"
+  "profiles": {
+   "IIS Express": {
+    "commandName": "IISExpress",
+    "launchBrowser": true,
+    "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+    "environmentVariables": {
+     "ASPNETCORE_ENVIRONMENT": "Development"
+    }
+   },
+   "MiracleListBW": {
+    "commandName": "Project",
+    "launchBrowser": true,
+    "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+    "applicationUrl": "https://localhost:5001;http://localhost:5000",
+    "environmentVariables": {
+     "ASPNETCORE_ENVIRONMENT": "Development"
+    }
    }
   }
- }
 }
