--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -30,8 +30,7 @@
   <!--Standardreferenzen für BW-->
 	 <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
 	 <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
-
-	 <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+	 <PackageReference Include="System.Net.Http.Json" />
  </ItemGroup>
 
  <!--Projektreferenzen-->
