--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -7,7 +7,9 @@
 
  <!--Versionsinformationen-->
  <PropertyGroup>
-  <Version>0.2.1.0</Version>
+  <Version>0.2.2.0</Version>
+  <AssemblyVersion>0.2.2.0</AssemblyVersion>
+  <FileVersion>0.2.2.0</FileVersion>
  </PropertyGroup>
 	
  <!--optionale Anwendungseinstellungen-->
