--- a/MiracleListBW/Properties/launchSettings.json
+++ b/MiracleListBW/Properties/launchSettings.json
@@ -3,8 +3,8 @@
   "windowsAuthentication": false,
   "anonymousAuthentication": true,
   "iisExpress": {
-   "applicationUrl": "http://localhost:6843",
-   "sslPort": 44303
+   "applicationUrl": "http://localhost:6843/",
+   "sslPort": 44341
   }
  },
  "profiles": {
@@ -16,14 +16,13 @@
     "ASPNETCORE_ENVIRONMENT": "Development"
    }
   },
- "MiracleListBW": {
-    "commandName": "Project",
-    "launchBrowser": true,
-    "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-    "applicationUrl": "https://localhost:5001;http://localhost:5000",
-    "environmentVariables": {
-     "ASPNETCORE_ENVIRONMENT": "Development"
-    }
+  "MiracleList_CSB": {
+   "commandName": "Project",
+   "launchBrowser": true,
+   "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+   "applicationUrl": "https://localhost:5001;http://localhost:5000",
+   "environmentVariables": {
+    "ASPNETCORE_ENVIRONMENT": "Development"
    }
   }
  }
