--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,20 +2,18 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net6.0</TargetFramework>
+  <TargetFramework>net7.0</TargetFramework>
  </PropertyGroup>
 
  <!--Versionsinformationen-->
  <PropertyGroup>
-  <Version>0.3.2.0</Version>
-  <AssemblyVersion>0.3.2.0</AssemblyVersion>
-  <FileVersion>0.3.2.0</FileVersion>
+  <Version>0.3.3.0</Version>
  </PropertyGroup>
 	
  <!--optionale Anwendungseinstellungen-->
  <PropertyGroup>
   <Description>Blazor WebAssembly-Version des MiracleList Web Frontends</Description>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2021</Copyright>
+  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2022</Copyright>
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
@@ -30,10 +28,10 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.*" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
  </ItemGroup>
 
  <!--Projektreferenzen-->
